Updating Requirements.txt
fixing requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,135 +1,135 @@
-anyio==3.7.0
-asttokens==2.2.1
-async-generator==1.10
-attrs==22.2.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bs4==0.0.1
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-comm==0.1.2
-contourpy==1.0.7
-cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-executing==1.2.0
-fastapi==0.96.0
-flatbuffers==23.5.26
-fonttools==4.39.0
-fuzzywuzzy==0.18.0
-geographiclib==2.0
-geopy==2.3.0
-graphviz==0.20.1
-greenlet==2.0.2
-h11==0.14.0
-htmlmin==0.1.12
-idna==3.4
-ImageHash==4.3.1
-imbalanced-learn==0.10.1
-imblearn==0.0
-importlib-resources==5.12.0
-init==0.1.0
-intel-openmp==2023.1.0
-ipykernel==6.20.2
-ipython==8.9.0
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.1.1
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-kiwisolver==1.4.4
-kneed==0.8.3
-libclang==16.0.0
-lxml==4.9.2
-MarkupSafe==2.1.3
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-missingno==0.5.2
-mkl==2023.1.0
-multimethod==1.9.1
-mysql-connector-python==8.0.32
-nest-asyncio==1.5.6
-network==0.1
-networkx==3.0
-nltk==3.8.1
-numpy==1.23.5
-oauthlib==3.2.2
-openpyxl==3.1.2
-outcome==1.2.0
-packaging==23.0
-pandas==2.0.2
-pandas-profiling==3.2.0
-parso==0.8.3
-patsy==0.5.3
-phik==0.12.3
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==2.6.2
-prompt-toolkit==3.0.36
-protobuf==3.20.3
-psutil==5.9.4
-psycopg2==2.9.6
-pure-eval==0.2.2
-py4j==0.10.9.7
-pyasn1==0.5.0
-pycparser==2.21
-pydantic==1.10.8
-Pygments==2.14.0
-PyMySQL==1.0.3
-pyparsing==3.0.9
-PySocks==1.7.1
-pyspark==3.4.0
-python-dateutil==2.8.2
-pytz==2022.7.1
-PyWavelets==1.4.1
-pywin32==305
-PyYAML==6.0
-pyzmq==25.0.0
-regex==2023.5.5
-requests==2.28.2
-scikit-learn==1.2.2
-scipy==1.10.1
-seaborn==0.12.2
-selenium==4.8.3
-six==1.16.0
-sklearn==0.0.post5
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-spicy==0.16.0
-SQLAlchemy==2.0.9
-SQLAlchemy-Utils==0.40.0
-stack-data==0.6.2
-starlette==0.27.0
-statsmodels==0.14.0
-sweetviz==2.1.4
-tangled-up-in-unicode==0.2.0
-tbb==2021.9.0
-tensorboard-data-server==0.7.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-terminal==0.4.0
-threadpoolctl==3.1.0
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-trio==0.22.0
-trio-websocket==0.10.2
-typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==1.26.15
-utils==1.0.1
-uvicorn==0.22.0
-visions==0.7.4
-wcwidth==0.2.6
-wordcloud==1.9.2
-wrapt==1.14.1
-wsproto==1.2.0
-xgboost==1.7.5
-xlrd==2.0.1
+anyio
+asttokens
+async-generator
+attrs
+backcall
+beautifulsoup4
+bs4
+certifi
+cffi
+charset-normalizer
+click
+colorama
+comm
+contourpy
+cycler
+debugpy
+decorator
+et-xmlfile
+exceptiongroup
+executing
+fastapi
+flatbuffers
+fonttools
+fuzzywuzzy
+geographiclib
+geopy
+graphviz
+greenlet
+h11
+htmlmin
+idna
+ImageHash
+imbalanced-learn
+imblearn
+importlib-resources
+init
+intel-openmp
+ipykernel
+ipython
+jedi
+Jinja2
+joblib
+jupyter_client
+jupyter_core
+kiwisolver
+kneed
+libclang
+lxml
+MarkupSafe
+matplotlib
+matplotlib-inline
+missingno
+mkl
+multimethod
+mysql-connector-python
+nest-asyncio
+network
+networkx
+nltk
+numpy
+oauthlib
+openpyxl
+outcome
+packaging
+pandas
+pandas-profiling
+parso
+patsy
+phik
+pickleshare
+Pillow
+platformdirs
+prompt-toolkit
+protobuf
+psutil
+psycopg2
+pure-eval
+py4j
+pyasn1
+pycparser
+pydantic
+Pygments
+PyMySQL
+pyparsing
+PySocks
+pyspark
+python-dateutil
+pytz
+PyWavelets
+pywin32
+PyYAML
+pyzmq
+regex
+requests
+scikit-learn
+scipy
+seaborn
+selenium
+six
+sklearn
+sniffio
+sortedcontainers
+soupsieve
+spicy
+SQLAlchemy
+SQLAlchemy-Utils
+stack-data
+starlette
+statsmodels
+sweetviz
+tangled-up-in-unicode
+tbb
+tensorboard-data-server
+tensorflow-estimator
+tensorflow-io-gcs-filesystem
+termcolor
+terminal
+threadpoolctl
+tornado
+tqdm
+traitlets
+trio
+trio-websocket
+typing_extensions
+tzdata
+urllib3
+utils
+uvicorn
+visions
+wcwidth
+wordcloud
+wrapt
+wsproto
+xgboost
+xlrd
